[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "betonquest-docs"
version = "0.0.0"
requires-python = ">=3.9"

dependencies = [
  "mkdocs-material==9.7.1",
  "mkdocs-snippets==1.3.2",
  "mkdocs-exclude==1.0.2",
  "mike==2.1.3",
]

[project.optional-dependencies]
imaging = [
  "mkdocs-material[imaging]==9.7.1",
]

[tool.setuptools]
packages = []
